--- a/Proyecto 11 - Who is who/src/Front-End/Forms/Board.resx
+++ b/Proyecto 11 - Who is who/src/Front-End/Forms/Board.resx
@@ -4175,7 +4175,7 @@
         AHGn6H8JeIn/ACUGI9T/2Q==
 </value>
   </data>
-  <data name="btn_consulta3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnLevels.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAQEAXgBeAAD/4QAiRXhpZgAATU0AKgAAAAgAAQESAAMAAAABAAEAAAAAAAD/2wBD
         AAIBAQIBAQICAgICAgICAwUDAwMDAwYEBAMFBwYHBwcGBwcICQsJCAgKCAcHCg0KCgsMDAwMBwkODw0M
@@ -4203,7 +4203,7 @@
         ITagAfLvWQgSwkZb6R8A+GZfBXgTRdGn1K+1mbSbCCyk1C8bdc3zRxqhmkPd3K7mPck0Af/Z
 </value>
   </data>
-  <data name="btn_consulta2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnPaths.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAQEAXgBeAAD/4QAiRXhpZgAATU0AKgAAAAgAAQESAAMAAAABAAEAAAAAAAD/2wBD
         AAIBAQIBAQICAgICAgICAwUDAwMDAwYEBAMFBwYHBwcGBwcICQsJCAgKCAcHCg0KCgsMDAwMBwkODw0M
@@ -4232,7 +4232,7 @@
         QOwDMRVRjyxUV0+f49TSjTVOnGmm2opLVtvTTVu7b7tttvV6n//Z
 </value>
   </data>
-  <data name="btn_consulta1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnLeafs.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAQEAXgBeAAD/4QAiRXhpZgAATU0AKgAAAAgAAQESAAMAAAABAAEAAAAAAAD/2wBD
         AAIBAQIBAQICAgICAgICAwUDAwMDAwYEBAMFBwYHBwcGBwcICQsJCAgKCAcHCg0KCgsMDAwMBwkODw0M
@@ -4891,7 +4891,7 @@
         FOC0UZ1cmNTDv79O1UId1aVQ9y/GgEvuPQelskyklCjJM06nP4YN6Z7leT77AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnsi.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnYes.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACgAAAAeCAIAAADRv8uKAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
         IgAALiIBquLdkgAABC9JREFUSEuFljlLLFEQhecpGhsZCIKmGgiDYCIoKGJmJAYmYuaAYOJuoGb+AiMR
